# ndc-sdk-typescript

./: .gitignore  .npmignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  README.md  changelog.md  flake.nix  generate-types.ts  package-lock.json  package.json  tsconfig.json
.github/workflows/: build_test_publish.yaml  publish.yaml  test.yaml
example/: package-lock.json  package.json
example/src/: db.ts  index.ts  query.ts  schema.ts
src/: configuration-server.ts  configuration_server.ts  connector.ts  error.ts  index.ts  instrumentation.ts  logging.ts  schemas.ts  server.ts
src/schema/: index.ts  schema.generated.json  schema.generated.ts  schema.generated.ts.patch  version.generated.ts
typegen/: Cargo.toml  regenerate-schema.sh
typegen/json_schema/src/: main.rs
typegen/src/: main.rs
typegen/typescript/: index.ts  package-lock.json  package.json
