[package]
name = "generate_types"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ndc-models = { git = "http://github.com/hasura/ndc-spec.git", branch = "main" }
schemars = "0.8.15"
serde = "^1.0"
serde_json = "1.0.107"
serde_derive = "^1.0"
