[package]
name = "generate_types"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ndc-models = { git = "http://github.com/hasura/ndc-spec.git", tag = "v0.2.0-rc.2" }
schemars = "^0.8"
serde = "^1.0"
serde_json = "^1.0"
serde_derive = "^1.0"
