[package]
name = "generate_types"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ndc-models = { git = "http://github.com/hasura/ndc-spec.git", tag = "v0.2.13" }
schemars = { version = "^0.8", features = ["indexmap2", "preserve_order", "smol_str"] }
serde = "^1.0"
serde_json = { version = "^1.0.132", features = ["preserve_order"] }
serde_derive = "^1.0"
indexmap = { version = "2", features = ["serde"] }
serde_with = "3"
smol_str = { version = "0.1", features = ["serde"] }
